k8s_backup/client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
   name: client-deployment
spec:
   replicas: 3
   selector:
      machLabels:
         component: web
   template:
      metadata:
         labels: 
            component: web
      spec:
         containers:
            - name: client
              image: tato/multi-client
              ports:
                 - containerPort: 3000
