k8s_backup/server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
   name: server-deployment
spec:
   replicas: 3
   selector:
      machLabels:
         component: server
   template:
      metadata:
         labels: 
            component: server
      spec:
         containers:
            - name: server
              image: tato/multi-server
              ports:
                 - containerPort: 5000
